完成数据从数据库中读取

--- a/pom.xml
+++ b/pom.xml
@@ -42,16 +42,18 @@
         </dependency>
 
         <dependency>
-            <groupId>org.ansj</groupId>
-            <artifactId>ansj_seg</artifactId>
-            <version>5.1.6</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.huaban/jieba-analysis -->
         <dependency>
-            <groupId>it.uniroma1.dis.wsngroup.gexf4j</groupId>
-            <artifactId>gexf4j</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.huaban</groupId>
+            <artifactId>jieba-analysis</artifactId>
+            <version>1.0.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
