--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 jdbc:
   driver: com.mysql.jdbc.Driver
-  url: jdbc:mysql://localhost:3306/business?useUnicode=true&characterEncoding=utf8&useSSL=false
+  url: jdbc:mysql://localhost:3306/jianshu?useUnicode=true&characterEncoding=utf8&useSSL=false
   username: root
   password: root
 
