--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 
 jdbc:
   driver: com.mysql.jdbc.Driver
-  url: jdbc:mysql://localhost:3306/jianshu?useUnicode=true&characterEncoding=utf8&useSSL=false
+  url: jdbc:mysql://10.25.44.204:3306/jianshu?useUnicode=true&characterEncoding=utf8&useSSL=false
   username: root
-  password: root
+  password: 123456
 
 #Mybatis
 mybatis_config_file: mybatis-config.xml
