--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <version>4.13-beta-1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
